<resources>
    <string name="app_name">Study Japanese</string>
    <string name="activity_word">Word</string>
    <string name="add_word">Add Word</string>
    <string name="quiz">Quiz</string>
    <string name="settings">Setting</string>
    <string name="update_word">Update Word</string>

    <!-- Strings for menu_main-->
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_update">Update</string>
    <string name="save_data">Save</string>

    <!-- Strings for AddWordActivity-->
    <string name="text_Japanese_Word">Japanese Word</string>
    <string name="text_Chinese_Meaning">Chinese Meaning</string>
    <string name="text_Category">Category</string>
    <string name="text_Example">Example</string>
    <string-array name="Category">
        <item>Meal</item>
        <item>Shopping</item>
        <item>Study</item>
        <item>Job</item>
        <item>Traffic</item>
    </string-array>

    <!-- Strings for SettingsActivity-->
    <string name="pref_audio">Setting Audio</string>
    <string name="pref_song">Setting Song</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Open Music</string>
    <string name="pref_show_false">Close Music</string>

    <!-- Key name for storing music in SharedPreferences -->
    <string name="pref_set_audio_key" translatable="false">pref_audio</string>
    <string name="pref_set_song_key" translatable="false">pref_song</string>

    <!-- Label for song preference -->
    <string name="pref_song_blms">BLMS</string>
    <string name="pref_song_lst">LST</string>
    <string name="pref_song_mjt">MJT</string>
    <!-- Value in SharedPreferences for song option -->
    <string name="pref_song_blms_value" translatable="false">blms</string>
    <string name="pref_song_lst_value" translatable="false">lst</string>
    <string name="pref_song_mjt_value" translatable="false">mjt</string>

    <!-- text for quiz-->
    <string name="text_button1">チップ</string>
    <string name="text_button2">しはらう</string>
    <string name="text_button3">スープ</string>
    <string name="text_button4">シェフ</string>
    <string name="text_quiz">小費</string>

    <!-- color for button-->
    <drawable name="btn_normal">#E6E6FA</drawable>
    <drawable name="btn_pressed">#5599FF</drawable>
    <drawable name="btn_pressed_incorrect">#DC143C</drawable>
</resources>
