<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.studyjapanese.WordActivity">

    <item
        android:id="@+id/add_word"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/setting"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sorting"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="300"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

</menu>