<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#F5F3F5"
    android:textColor="#1F3B2C">
    <!-- EditText for getting task description input -->
    <TextView
        android:id="@+id/updateTextWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Japanese_Word"
        android:textColor="#1F3B2C"/>

    <EditText
        android:id="@+id/updateJapaneseWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:paddingBottom ="@dimen/activity_horizontal_margin"
        android:textColor="#1F3B2C"/>

    <TextView
        android:id="@+id/updateTextMean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Chinese_Meaning"
        android:textColor="#1F3B2C"/>

    <EditText
        android:id="@+id/updateChineseMeaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:paddingBottom ="@dimen/activity_horizontal_margin"
        android:textColor="#1F3B2C"/>

    <TextView
        android:id="@+id/updateTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Category"
        android:textColor="#1F3B2C"/>

    <Spinner
        android:id="@+id/updateSpinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1F3B2C"/>

    <TextView
        android:id="@+id/updateTextExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Example"
        android:textColor="#1F3B2C"/>

    <EditText
        android:id="@+id/updateExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:paddingBottom ="@dimen/activity_horizontal_margin"
        android:textColor="#1F3B2C"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:onClick="onClickUpdateWord"
        android:background="@color/buttoncolor"
        android:textColor="	#FFFFFF"/>


</LinearLayout>